--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">桂电课程表</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--  数据库  -->
+    <string name="data_General_table_name">tableGeneral</string>
+
 </resources>
