feat:登录和导入实际课表（2020-2021_1学期）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <!--  数据库  -->
     <string name="data_General_table_name">tableGeneral</string>
 
+    <!-- 老版本教务系统 -->
+    <string name="url_login">http://bkjw2.guet.edu.cn/student/public/login.asp</string>
+    <string name="url_course">http://bkjw2.guet.edu.cn/student/coursetable.asp</string>
+    <string name="url_info">http://bkjw2.guet.edu.cn/student/info.asp</string>
+
 </resources>
