--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,13 @@
     <string name="lan_get_checkcode_url">http://172.16.13.22/login/GetValidateCode?id=0.7060164569272753</string>
     <string name="lan_get_checkcode_referer">http://172.16.13.22/</string>
 
+    <string name="lan_login_url">http://172.16.13.22/Login/SubmitLogin</string>
+    <string name="lan_login_referer">http://172.16.13.22/</string>
+    <string name="lan_login_success_contain_response_text">\"success\":true</string>
+
+    <string name="lan_login_fail">登录失败, 检查校园网连接后重试</string>
+    <string name="lan_login_fail_ck">验证码错误，登录失败</string>
+    <string name="lan_login_fail_pwd">密码错误，登录失败</string>
 
     <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.89 Safari/537.36</string>
     <string name="cookie_delimiter">"; "</string>
