--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,18 @@
     <string name="lan_login_referer">http://172.16.13.22/</string>
     <string name="lan_login_success_contain_response_text">\"success\":true</string>
 
+    <string name="lan_get_student_url">http://172.16.13.22/student/StuInfo</string>
+    <string name="lan_get_student_referer">http://172.16.13.22</string>
+    <string name="lan_get_student_success_contain_response_text">\"name\"</string>
+
+    <string name="lan_get_terms_url">http://172.16.13.22/Comm/GetTerm</string>
+    <string name="lan_get_terms_referer">http://172.16.13.22</string>
+    <string name="lan_get_terms_success_contain_response_text">\"success\":true</string>
+
+    <string name="lan_get_table_url">http://172.16.13.22/student/getstutable</string>
+    <string name="lan_get_table_referer">http://172.16.13.22</string>
+    <string name="lan_get_table_success_contain_response_text">\"success\":true</string>
+
     <string name="lan_login_fail">登录失败, 检查校园网连接后重试</string>
     <string name="lan_login_fail_ck">验证码错误，登录失败</string>
     <string name="lan_login_fail_pwd">密码错误，登录失败</string>
