--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="guet_yvyan_top">http://guet.yvyan.top/</string>
     <string name="downloadApp_url">https://cloud.yvyan.top/index.php/s/mzF5nkCLfikHnjs</string>
 
-    <string name="share_hint">  您可以复制下面的信息发给同学或者群聊，同学点击链接即可下载最新版桂电课程表</string>
+    <string name="share_hint">建议直接将此APP发给同学，若您没有找不到安装包，可以复制下面的信息发给同学或者群聊，同学点击链接即可下载最新版桂电课程表：</string>
     <string name="share_text">新的桂电课程表，挺好用的，分享给你，点击链接下载：https://cloud.yvyan.top/index.php/s/mzF5nkCLfikHnjs \n(同学自己的服务器，人数多时下载较慢，请耐心等待)</string>
 
     <string name="lan_login_fail">登录失败, 检查校园网连接后重试</string>
