--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="lan_get_exam_url">http://172.16.13.22/student/getexamap</string>
     <string name="lan_get_cet_url">http://172.16.13.22/student/GetLvlScore</string>
     <string name="lan_get_examscore_url">http://172.16.13.22/Student/GetStuScore</string>
+    <string name="lan_get_experimentscore_url">http://172.16.13.22/student/getstulab</string>
 
     <string name="guet_yvyan_top">http://guet.yvyan.top/</string>
     <string name="downloadApp_url">https://cloud.yvyan.top/index.php/s/mzF5nkCLfikHnjs</string>
