--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,21 @@
 <resources>
     <string name="app_name">桂电课程表</string>
 
+    <!-- 统一登录 -->
+    <string name="url_get_TGT">https://cas.guet.edu.cn/cas/v1/tickets</string>
+    <string name="url_get_TGT_vpn">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/cas/v1/tickets</string>
+    <string name="url_get_ST">https://cas.guet.edu.cn/cas/v1/tickets/</string>
+    <string name="url_get_ST_vpn">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/cas/v1/tickets/</string>
+
+    <string name="SSO_context_type">application/x-www-form-urlencoded;charset=UTF-8</string>
+    <string name="SSO_referer">https://cas.guet.edu.cn/</string>
+    <string name="SSO_success_contain_TGT">TGT-</string>
+    <string name="SSO_success_contain_ST">ST-</string>
+    <string name="service_bkjw">service=http://172.16.13.22</string>
+    <string name="service_vpn">service=https://v.guet.edu.cn/login?cas_login=true</string>
+    <string name="SSO_bkjw">http://172.16.13.22/login/login</string>
+    <string name="SSO_vpn">https://v.guet.edu.cn/https/77726476706e69737468656265737421e6b94689222426557a1dc7af96/login</string>
+
     <!-- 新版教务系统 -->
     <string name="lan_get_checkcode_url">/login/GetValidateCode?id=0.7060164569272753</string>
     <string name="lan_get_checkcode_referer">/</string>
