更新版本号2.8.1 首页添加考试倒计时 添加感谢名单

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,6 @@
     <string name="cookie_delimiter">"; "</string>
     <string name="setting">设置</string>
     <string name="todo">TODO</string>
+    <string name="thanks_person">Casual | 就这 | ୧⍤⃝ⓍⓅ乏了 | 我终究不是个好人 | 🍓  |  sin²</string>
 
 </resources>
