--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,7 +88,7 @@
     <string name="thanks_2">GUET课程表: https://github.com/Telephone2019/CourseTable</string>
     <string name="join_us">我们开发者团队希望这个项目能够持久，我们也会一直开源，但是我们终究会离开校园，我们希望有能力喜欢奉献的你加入我们，让这个课程表可以长长久久！ \n\n看看我们自己，为了一个共同的小目标不顾一切，可能这就是青春吧！有想法？请立刻加入QQ群私聊我们！</string>
 
-    <string name="lan_login_fail">登录失败, 检查校园网连接后重试</string>
+    <string name="lan_login_fail">登录失败, 请稍后重试</string>
     <string name="lan_login_fail_ck">验证码错误，登录失败</string>
     <string name="lan_login_fail_pwd">密码错误，登录失败</string>
 
