fix:切换网络导致更新出现未知错误的bug perf:加快登录和更新速度 perf:重新引入了OCR识别,为双登录提供条件

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">桂电课程表</string>
 
     <!-- 统一登录 -->
-    <string name="vpn_url">https://v.guet.edu.cn</string>
+    <string name="vpn_url">https://v.guet.edu.cn/login</string>
+    <string name="vpn_refer">https://v.guet.edu.cn</string>
 
     <string name="url_get_TGT">https://cas.guet.edu.cn/cas/v1/tickets</string>
     <string name="url_get_TGT_vpn">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/cas/v1/tickets</string>
