调整更多功能页面的布局代码，添加对应字符串资源

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
     <string name="todo">TODO</string>
     <string name="thanks_person">Casual | 就这 | ୧⍤⃝ⓍⓅ乏了 | 我终究不是个好人 | 🍓  |  sin²</string>
     
+    <string name="text_test"> 测试 </string>
     
     <string name="moreFun_titleBar"> 更多功能 </string>
     <string name="moreFun_jiaowu"> 教务查询 </string>
