feat:首次使用显示隐私协议 util:弹窗工具类

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,17 @@
     <string name="thanks_1">课程表控件: https://github.com/zfman/TimetableView</string>
     <string name="thanks_2">GUET课程表: https://github.com/Telephone2019/CourseTable</string>
     <string name="join_us">我们开发者团队希望这个项目能够持久，我们也会一直开源，但是我们终究会离开校园，我们希望有能力喜欢奉献的你加入我们，让这个课程表可以长长久久！ \n\n看看我们自己，为了一个共同的小目标不顾一切，可能这就是青春吧！有想法？请立刻加入QQ群私聊我们！</string>
+    <string name="privacy_text">\u0020\u0020在您使用过程中，桂电课程表可能会申请以下权限：\n
+        1.读写手机存储权限\n
+        \u0020\u0020当您成功登录后，用于存储课程表、考试安排等数据信息，便于下次离线查看。\n
+        2.获取手机信息权限\n
+        \u0020\u0020使用的第三方产品，会根据手机信息提供相关服务。\n
+        3.网络权限\n
+        \u0020\u0020当你登录教务账号后，用于获取教务数据，更新课表和考试安排等信息\n
+        \u0020\u0020以上申请的权限，我们只用于必要的功能之中，不会收集您的隐私。若您选择拒绝授权，则只是相应功能无法使用或查看，不会影响应用整体使用。\n
+        \u0020\u0020我们的产品或服务可能包括第三方的产品或服务，当您使用这些产品或服务时，也可能收集并使用您的信息以为您提供服务。\n
+        \u0020\u0020这些信息无法定位到您，我们也不会使用这些信息尝试对您定位。收集这些信息仅用于定位软件问题与解决问题。我们会尽最大努力保证您的隐私与数据安全。
+    </string>
 
     <string name="lan_login_fail">登录失败, 请稍后重试</string>
     <string name="lan_login_fail_ck">验证码错误，登录失败</string>
