--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,7 @@
     <string name="lan_login_fail">登录失败, 请稍后重试</string>
     <string name="lan_login_fail_ck">验证码错误，登录失败</string>
     <string name="lan_login_fail_pwd">密码错误，登录失败</string>
+    <string name="lan_login_fail_getInfo">获取个人信息失败，请稍后重试</string>
 
     <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.89 Safari/537.36</string>
     <string name="cookie_delimiter">"; "</string>
