--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,10 +113,12 @@
         \u0020\u0020这些信息无法定位到您，我们也不会使用这些信息尝试对您定位。收集这些信息仅用于定位软件问题与解决问题。我们会尽最大努力保证您的隐私与数据安全。
     </string>
 
-    <string name="lan_login_fail">登录失败, 请稍后重试</string>
-    <string name="lan_login_fail_ck">验证码错误，登录失败</string>
-    <string name="lan_login_fail_pwd">密码错误，登录失败</string>
-    <string name="lan_login_fail_getInfo">获取个人信息失败，请稍后重试</string>
+    <string name="login_fail">登录失败, 请稍后重试</string>
+    <string name="login_fail_ck">验证码错误，登录失败</string>
+    <string name="login_fail_pwd">密码错误，登录失败</string>
+    <string name="login_fail_vpn">VPN密码错误，登录失败</string>
+    <string name="login_fail_bkjw">教务密码错误，登录失败</string>
+    <string name="login_fail_getInfo">获取个人信息失败，请稍后重试</string>
 
     <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.89 Safari/537.36</string>
     <string name="cookie_delimiter">"; "</string>
