--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,11 +77,11 @@
     <string name="url_lijiang">http://www.gxljxt.cn/</string>
     <string name="downloadApp_url">http://app.xiaomi.com/detail/1288502</string>
 
-    <string name="text_school_song">桂电校歌 (我们从东西南北走过来)</string>
+    <string name="text_school_song">桂电校歌</string>
     <string name="url_school_song">https://music.163.com/#/song?id=469744200</string>
-    <string name="text_resource_center">教学资源中心 (网课群号)</string>
+    <string name="text_resource_center">教学资源中心(网课群号)</string>
     <string name="url_resource_center">https://www.guet.edu.cn/jxzyzx/</string>
-    <string name="text_net_login">上网登录页(出校器认证)</string>
+    <string name="text_net_login">上网登录页</string>
     <string name="url_net_login">http://10.0.1.5/</string>
     <string name="text_cet">四六级官网(报名、查成绩)</string>
     <string name="url_cet">http://cet.neea.edu.cn/</string>
@@ -93,6 +93,10 @@
     <string name="url_calendar">http://utsc.guet.edu.cn/calendar.aspx?mCode=0010</string>
     <string name="text_lib_open">图书馆开放时间</string>
     <string name="url_lib_open">https://www.guet.edu.cn/lib/info/1064/2891.htm</string>
+    <string name="text_map_hj">花江校区地图</string>
+    <string name="url_map_hj">https://www.guet.edu.cn/xxjj/hjxqpmdt.htm</string>
+    <string name="text_map_jjl">金鸡岭校区地图</string>
+    <string name="url_map_jjl">https://www.guet.edu.cn/xxjj/jjlxqpmdt.htm</string>
 
     <string name="first_about">该项目与学校官方无关。个人开发者作品，不含广告，永久免费。\n\n 该项目会一直开源，一直保证代码库最新，保证和小伙伴使用的APP源码一致。开源是为了接受大家的监督，也是保护小伙伴教务隐私的有效手段，感谢大家的支持！</string>
     <string name="about_1">仍然记得刚入学时看到同学发来的“桂电课程表”时的激动，一个简单的APP，却能够给桂电学子带来切实的便利，自己又何尝不想成为这样一个人…</string>
