--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,8 @@
 
     <string name="text_guetClassTable">桂电课程表交流群</string>
     <string name="key_guetClassTable">b6B5JNbpsHV0scWnS1amN7NH3Ry-LlrP</string>
+    <string name="text_guet_find_3">桂电人失物招领3群(官方)</string>
+    <string name="key_guet_find_3">MENv-n3_z8D6h4F9nyn-oiK-Z-FBM5Pr</string>
     <string name="text_guilin_love">桂林高校表白墙</string>
     <string name="key_guilin_love">7ZSUyJ-ZHyXuoOsyBGsfCq6PVZQJjHsR</string>
 
@@ -150,7 +152,7 @@
     <!-- 更多功能 -->
     <string name="text_test"> 测试 </string>
 
-    <string name="titleBar_1">日课表</string>
+    <string name="titleBar_1">课表</string>
     <string name="titleBar_3">更多功能</string>
     <string name="titleBar_4">个人信息</string>
     <string name="moreFun_jiaowu"> 教务查询 </string>
