--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,7 +157,7 @@
     <string name="cookie_delimiter">"; "</string>
     <string name="setting">设置</string>
     <string name="todo">TODO</string>
-    <string name="thanks_person">Casual | 就这 | ୧⍤⃝ⓍⓅ乏了 | 我终究不是个好人 | 🍓  |  sin²  |  沉山浮阳</string>
+    <string name="thanks_person">Casual | 就这 | ୧⍤⃝ⓍⓅ乏了 | 我终究不是个好人 | 🍓  |  sin²  |  沉山浮阳 | 迷 </string>
 
     <!-- 创新积分-->
     <string name="lan_get_innovationScore"> http://172.16.13.22/student/getcxcy </string>
