--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,5 +215,12 @@
     <string name="moreFun_innovation_score">创新积分</string>
     <string name="more_func_empty">暂无数据</string>
     <string name="more_func_fail">加载失败</string>
+    <string name="hint_account">请输入学号</string>
+    <string name="hint_BKJW_password">请输入教务密码</string>
+    <string name="hint_vpn_password">请输入智慧校园(VPN)密码</string>
+    <string name="remember_password">记住密码</string>
+    <string name="login">登录</string>
+    <string name="first_login">第一次登录智慧校园</string>
+    <string name="change_password">&#160;&#160;修改智慧校园/VPN登录密码&#160;&#160;</string>
 
 </resources>
