feat: 初步加入桌面部件

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,4 +217,7 @@
     <string name="more_func_empty">暂无数据</string>
     <string name="more_func_fail">加载失败</string>
 
+    <string name="appwidget_text">示例</string>
+    <string name="add_widget">APP小部件</string>
+
 </resources>
